fix sessionButton alignment

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -27,6 +27,7 @@
 .header div{
     display: flex;
     height: inherit;
+    align-self: flex-start;
 }
 
 .face {
